--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,9 +1,9 @@
-$black-color: #333 ;
+$black-color: rgba(0,0,0,0.95) ;
 
 body {
     height: 100%;
     width: 100%;
-    background-color: dimgray;
+    background-color: $black-color;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -29,8 +29,8 @@ body {
 
 #heatmap {
     height: 450px;
-    display: inline-block;
-    width: 900px;
+    display: block;
+    width: 1000px;
 }
 
 #heatmap text {
@@ -49,7 +49,7 @@ rect.bordered {
 }
 
 .ui.inverted.fixed.large.table {
-    background-color: dimgray;
+    background-color: $black-color;
     th {
         background-color: inherit;
     }
